
AX_CONFIG_FILES(
 Makefile
 rfx_pwmgen/Makefile
 rfx_pwmgen/linux/src/Makefile
 rfx_pwmgen/linux/src/Kbuild
 rfx_rpadc/Makefile
 rfx_rpadc/linux/src/Makefile
 rfx_rpadc/linux/src/Kbuild
 rfx_nioadc/Makefile
 rfx_nioadc/linux/src/Makefile
 rfx_nioadc/linux/src/Kbuild
 w7x_timing/Makefile
 prova/Makefile
)

