
AX_CONFIG_FILES(
 Makefile
 rfx_pwmgen/Makefile
 rfx_pwmgen/linux/src/Makefile
 rfx_pwmgen/linux/src/Kbuild
 rfx_rpadc/Makefile
 rfx_rpadc/linux/src/Makefile
 rfx_rpadc/linux/src/Kbuild
 rfx_nioadc/Makefile
 rfx_nioadc/linux/src/Makefile
 rfx_nioadc/linux/src/Kbuild
 w7x_timing/Makefile
 w7x_timing/linux/Makefile
 w7x_timing/linux/Kbuild
 prova/Makefile

 rfx_dmatests/Makefile
 rfx_dmatests/linux/Makefile
 rfx_dmatests/linux/Kbuild

 mit_jasadc/Makefile
 mit_jasadc/linux/src/Makefile
 mit_jasadc/linux/src/Kbuild

 rp_legacy/Makefile

 rfx_spalk/Makefile
 rfx_spalk/linux/src/Makefile
 rfx_spalk/linux/src/Kbuild

 axi_generic/Makefile
 axi_generic/linux/src/Makefile

 rfx_spdgauss/Makefile
 rfx_spdgauss/linux/src/Makefile

)

