include $(top_srcdir)/Common.mk
include $(top_srcdir)/fpga/Common.mk

FPGA_REPO_DIR   += $(top_builddir)/fpga/lib/red-pitaya-notes
FPGA_REPO_DIR   += $(top_builddir)/fpga/lib/rfx

VENDOR = rfx

## PROJECTS ##
vivado_PROJECTS = rpadc_dma rpadc_fifo
rpadc_fifo_VERSION   = 1.0
rpadc_fifo_SOURCES   = red_pitaya.xdc











